# meta-yoinker

./: Cargo.toml  README.md  index.html  meta-yoinker-4835bccd9669b518.js  meta-yoinker-4835bccd9669b518_bg.wasm  sw.js
.github/workflows/: pages.yml  release.yml  rust.yml
assets/: manifest.json  sw.js
src/: app.rs  dmi_window.rs  image_window.rs  lib.rs  main.rs  metadata.rs  sidebar.rs
