[package]
name = "meta-yoinker"
description = "A tool designed to extract and re-apply DMI/zTxt metadata"
version = "0.1.0"
authors = ["ZeWaka <zewakagamer@gmail.com>"]
license = "GPLv3"
repository = "https://github.com/ZeWaka/meta-yoinker"
keywords = ["dmi", "metadata"]
categories = ["development-tools", "encoding"]
edition = "2021"
rust-version = "1.71"


[dependencies]
dmi = "0.3.0"
egui = "0.22.0"
egui_extras = { version = "0.22.0", features = ["image"] }
egui-toast = "0.8.0"
image = { version = "0.24.7", default-features = false, features = ["png"] }
eframe = { version = "0.22.0", default-features = false, features = [
	#"accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
	"default_fonts", # Embed the default egui fonts.
	"glow",          # Use the glow rendering backend. Alternative: "wgpu".
	#"persistence",   # Enable restoring app state when restarting the app.
] }
log = "0.4"
lazy_static = "1.4.0"
once_cell = "1.8.0"
uuid = { version = "1.4.1", features = ["js", "fast-rng", "v4"] }

# You only need serde if you want app persistence:
#serde = { version = "1", features = ["derive"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"


[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
