[package]
name = "meta-yoinker"
description = "A tool designed to extract and re-apply DMI/zTxt metadata"
version = "1.0.1"
authors = ["ZeWaka <zewakagamer@gmail.com>"]
license = "GPL-3.0"
repository = "https://github.com/ZeWaka/meta-yoinker"
keywords = ["dmi", "metadata"]
categories = ["development-tools", "encoding"]
edition = "2021"
rust-version = "1.71"


[dependencies]
dmi = "0.3.0"
eframe = { version = "0.22.0", default-features = false, features = [
	#"accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
	"default_fonts", # Embed the default egui fonts.
	"glow",          # Use the glow rendering backend. Alternative: "wgpu".
	#"persistence",   # Enable restoring app state when restarting the app.
] }
egui = "0.22.0"
egui_extras = { version = "0.22.0", features = ["image"] }
egui-phosphor = "0.2.0"
egui-toast = "0.8.1"
image = { version = "0.24.7", default-features = false, features = ["png"] }
log = "0.4"
lazy_static = "1.4.0"
once_cell = "1.18.0"
rfd = "0.12.0"

# You only need serde if you want app persistence:
#serde = { version = "1", features = ["derive"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"
poll-promise = { version = "0.3.0", features = ["smol"] }
smol = "1.3.0"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
poll-promise = { version = "0.3.0", features = ["web"] }

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
